k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mechcraft
  labels:
    name: mechcraft
