k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mechcraft-api
  namespace: mechcraft
spec:
  selector:
    app: mechcraft-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
